idf_component_register(
    SRCS
        "src/internal/Esp32_i2s.c"
        "src/internal/HsbColor.cpp"
        "src/internal/HslColor.cpp"
        "src/internal/HtmlColor.cpp"
        "src/internal/HtmlColorNames.cpp"
        "src/internal/HtmlColorNameStrings.cpp"
        "src/internal/HtmlColorShortNames.cpp"
        "src/internal/NeoEsp32RmtMethod.cpp"
        "src/internal/NeoGamma.cpp"
        "src/internal/NeoPixelAnimator.cpp"
        "src/internal/NeoPixelAvr.c"
        "src/internal/RgbColor.cpp"
        "src/internal/RgbwColor.cpp"
        "src/internal/SegmentDigit.cpp"

    INCLUDE_DIRS "src"
)
